<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
<string name="app_name">ETalk</string>
<string name="dial_actionbar_title">快速拨号</string>
<string name="RecentCall_actionbar_title">通话记录</string>
<string name="Contacts_actionbar_title">联系人</string>
<string name="quick_call_manage">Manage Quick Dial</string>
<string name="home_bottom_quick_call">拨号</string>
	<string name="home_bottom_call_log">通话记录</string>
	<string name="home_bottom_contacts">联系人</string>
<string name="popup_text_create_new_quick_call">创建新快速呼叫</string>
<string name="popup_text_edit_this_contact">编辑该联系人</string>
<string name="popup_text_delete_this_contact">删除该联系人</string>
<string name="et_account_hint">手机号</string>
<string name="et_password_hint">密码</string>
<string name="login">登入</string>
<string name="tv_country">中国+86</string>
<string name="et_phoneNumber_hint">请输入你的手机号码</string>
<string name="tv_register_phone">填写手机号码</string>
<string name="tv_identifying_code">填写验证码</string>
<string name="tv_password">创建密码</string>
<string name="tv_password_hint">密码由6-16位数字,字母组成</string>
<string name="btn_send_identifying_code">发送验证码</string>
<string name="btn_Submit">提交</string>
<string name="btn_register">注册</string>
<string name="btn_next">下一步</string>
<string name="plus_add_account">注册账户</string>
	<string name="action_search">搜索</string>
    <string name="action_plus">功能</string>
    <string name="action_account">我的账户</string>
    <string name="action_collection">我的收藏</string>
    <string name="action_card">我的银行卡</string>
    <string name="action_feed">意见反馈</string>
    <string name="plus_group_chat">发起群聊</string>
    <string name="plus_add_friend">添加朋友</string>
    <string name="plus_video_chat">视频聊天</string>
    <string name="plus_scan">扫一扫</string>
    <string name="plus_take_photo">拍照分享</string>
<string name="pstn_name">电话</string>
<string name="sip_name">Sipdroid，当可用时</string>
	<string name="action_settings">设置</string>
	<string name="btn1">拨号</string>
    <string name="btn2">最近通话</string>
    <string name="btn3">联系人</string>
    <string name="btn4">其他</string>
    <string name="tv_contacts_btn">联系人</string>
    <string name="tv_favoritescontacts_btn">收藏夹</string>
    <string name="tv_callrecords_btn">本机通话</string>
    <string name="tv_favoritesrecords_btn">ET通话</string>
    <string name="profile_setting">账户设置</string>
    <string name="signal_strength">信号强度</string>
    <string name="security_level">安全性</string>
    <string name="password">密码</string>
    <string name="show_password">显示密码</string>
    <string name="connect">连接</string>
    <string name="disconnect">忘记</string>
    <string name="cancel">取消</string>
    <string name="conn_status">连接状态</string>
    <string name="ip_address">IP地址</string>
    <string name="phone_chooser_text">选择的联系人有多个号码.\n请选择默认号码. 您只需做一次.</string>
<string name="about">Sipdroid是Android系统下的开源SIP客户端。
\n
\n请浏览 http://sipdroid.org 以获得更多信息。
\n
\n版本 ${VERSION}

\n此为测试版本。

\n
\nCopyright (C) 2009 The Sipdroid Open Source Project (http://sipdroid.org)
\nCopyright (C) 2008 Hughes Systique Corporation, USA (http://hsc.com)
\nCopyright (C) 2006 The Android Open Source Project (http://android.com)
\nCopyright (C) 2005 Luca Veltri - University of Parma - Italy (http://mjsip.org)
\n
\nThis program is free software; you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation; either version 3 of the License, or (at your option) any later version.
\n
\nThis program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details (http://www.gnu.org/licenses).</string>
<string name="reg">正在登录...</string>
<string name="regpref">Preferred</string>
<string name="regclick">Click to select</string>
<string name="regfailed">登录失败</string>
<string name="voicemail">语音留言：</string>
<string name="auto_enabled">自动应答/扬声器</string>
<string name="auto_disabled">自动应答关闭</string>
<string name="hint">SIP地址</string>
<string name="hint2">电话号码</string>
<string name="empty">请输入一个类似于name@domain.com的SIP地址</string>
<string name="notfast">无适用的网络</string>
<string name="settings_account">ET账户设置</string>
<string name="settings_line">Line</string>
<string name="settings_username">认证用户名</string>
<string name="settings_password">密码</string>
<string name="settings_server">服务器</string>
<string name="settings_domain">域</string>
<string name="settings_domain2">如与服务器相同请留空</string>
<string name="settings_username1">用户名/Caller ID</string>
<string name="settings_callerid2">如与认证用户名一致请留空</string>
<string name="settings_port">端口</string>
	<string-array name="port_display_values2">
		<item>53</item>
		<item>69</item>
		<item>80</item>
		<item>135</item>
		<item>161</item>
		<item>443</item>
		<item>500</item>
		<item>1433</item>
		<item>1701</item>
		<item>1812</item>
		<item>3389</item>
		<item>4500</item>
		<item>5060 (标准)</item>
		<item>5061</item>
		<item>5070</item>
		<item>5900</item>
		<item>16999</item>
		<item>26999</item>
		<item>36999</item>
		<item>custom</item>
	</string-array>
	<string-array name="port_values2">
		<item>53</item>
		<item>69</item>
		<item>80</item>
		<item>135</item>
		<item>161</item>
		<item>443</item>
		<item>500</item>
		<item>1433</item>
		<item>1701</item>
		<item>1812</item>
		<item>3389</item>
		<item>4500</item>
		<item>5060</item>
		<item>5061</item>
		<item>5070</item>
		<item>5900</item>
		<item>16999</item>
		<item>26999</item>
		<item>36999</item>
		<item>0</item>
	</string-array>
<string name="settings_protocol">协议</string>
    <string-array name="protocol_display_values2">
        <item>UDP (3G网络下待机时间短)</item>
        <item>TCP (3G网络下待机时间长)</item>
        <item>TLS (encrypted)</item>
        </string-array>
    <string-array name="protocol_values2">
        <item>udp</item>
        <item>tcp</item>
        <item>tls</item>
        </string-array>
<string name="settings_vquality">视频质量</string>
    <string-array name="vquality_display_values">
        <item>High (352x288 @ 360kbit)</item>
        <item>Low (176x144 @ 192kbit)</item>
    </string-array>
    <string-array name="vquality_values">
        <item>high</item>
        <item>low</item>
    </string-array>
<string name="settings_stun">使用STUN服务器</string>
<string name="settings_stun_server">STUN服务器地址</string>
<string name="settings_stun_server_port">STUN服务器端口</string>
<string name="settings_mmtel">使用MMTel技术</string>
<string name="settings_mmtel_qvalue">Q值</string>
<string name="settings_options">通话选项</string>
<string name="settings_wlan">使用Wi-Fi网络</string>
<string name="settings_3g">使用3G网络</string>
<string name="settings_edge">使用EDGE网络</string>
<string name="settings_vpn">使用VPN</string>
<string name="settings_check">请确认你的运营商是否允许VoIP电话</string>
<string name="settings_vpn2">PBXes提供免费VPN服务，请进入www.pbxes.com并点击HELP获取相关信息。</string>
<string name="dialog_default">Sipdroid现在不是默认的电话程序，是否要将其设置为默认？
\n
\n如果你选择了 \'否\'，你仍然可以在拨号时在电话号码后加上字符\'+\'，或长按联系人选择 \'发送短信\'以强制使用Sipdroid拨号。</string>
<string name="dialog_message">是否查看Sipdroid 1.5的视频介绍？</string>
<string name="dialog_port">Would you like to change SIP port from 5060 to 5061 for improved reliability?</string>
<string name="yes">是</string>
<string name="no">否</string>
<string name="dontask">不再提示</string>
<string name="settings_pref">Sipdroid优先级</string>
<string name="settings_pref2">在拨号时在电话号码后加上字符\'+\'，或长按联系人选择 \'发送短信\'以强制使用Sipdroid拨号。</string>
    <string-array name="pref_display_values">
        <item>只使用Sipdroid</item>
        <item>当可用时使用Sipdroid</item>
        <item>总是使用电话</item>
        <item>Always ask</item>
    </string-array>
    <string-array name="pref_values">
        <item>SIPONLY</item>
        <item>SIP</item>
        <item>PSTN</item>
        <item>ASK</item>
    </string-array>
<string name="settings_compression">语音压缩</string>
    <string-array name="compression_display_values">
        <item>仅当使用WLAN时</item>
        <item>仅当使用WLAN/3G时</item>
        <item>总是尝试使用</item>
        <item>从不使用</item>
    </string-array>
    <string-array name="compression_values">
        <item>wlan</item>
        <item>wlanor3g</item>
        <item>always</item>
        <item>never</item>
    </string-array>
<string name="settings_auto_on">开启自动应答</string>
<string name="settings_auto_on2">振动提醒，仅用于非锁定状态下</string>
<string name="settings_auto_ondemand">快速切换自动应答</string>
<string name="settings_auto_ondemand2">在状态栏显示切换按钮</string>
<string name="settings_auto_headset">耳机插入时自动应答</string>
<string name="settings_auto_headset2">当耳机插入时开启自动应答</string>
<string name="settings_callrecord">通话记录</string>
<string name="settings_callrecord2">记录所有语音通话到SD卡</string>
<string name="settings_notifications">通知设置</string>
<string name="settings_MWI">语音留言</string>
<string name="settings_MWI2">自动检查是否有未读的语音留言</string>
<string name="settings_reg">登录</string>
<string name="settings_reg2">允许选择SIP帐户</string>
<string name="settings_notify">未接电话</string>
<string name="settings_notify2">使用蓝色LED灯提醒</string>
<string name="settings_nodata">无数据</string>
<string name="settings_nodata2">使用单音调指示数据包丢失</string>
<string name="settings_advanced_options">高级设置</string>
<string name="settings_av_options">音频设置</string>
<string name="settings_policy_never">改变系统休眠策略以保持Wi-Fi的开启状态</string>
<string name="settings_policy_default">重设Wi-Fi休眠设置为系统默认</string>
<string name="settings_search">查找和替换</string>
<string name="settings_excludepat">排除的正则表达式</string>
<string name="settings_sipringtone">SIP铃声</string>
<string name="settings_sipringtone2">设置SIP拨入电话的铃声</string>
<string name="settings_sipringtone_dialog">铃声</string>
<string name="settings_eargain">听筒音量</string>
<string name="settings_micgain">麦克风音量</string>
<string name="settings_heargain">耳机音量</string>
<string name="settings_hmicgain">耳机麦克风音量</string>
    <string-array name="eargain_display_values">
        <item>低 (无回音)</item>
        <item>中m</item>
        <item>高 (可能会出现回音)</item>
        <item>极高</item>
    </string-array>
    <string-array name="eargain_values">
        <item>0.1</item>
        <item>0.25</item>
        <item>0.5</item>
        <item>1.0</item>
    </string-array>
<string name="settings_pbxes_options">PBXes设置</string>
<string name="settings_par">多个拨出电话</string>
<string name="settings_par2">允许同时拨打多个电话</string>
<string name="settings_improve">音质优化</string>
<string name="settings_improve2">需要收费帐号</string>
<string name="settings_hdvoice">PBXes支持高清语音</string>
<string name="settings_posurl">地理位置及回拨URL地址</string>
<string name="settings_pos">更新地理位置</string>
<string name="settings_pos2">地址可被通报至PBXes的联系人(需要PBXes.com的Premium账户)</string>
<string name="settings_pos3">正在更新地理位置</string>
<string name="settings_callback">触发回拨</string>
<string name="settings_callback2">如没有合适的网络时</string>
<string name="settings_callthru">触发Callthru</string>
<string name="settings_callthru2">Callthru前缀</string>
<string name="settings_title">Sipdroid设置</string>
<string name="settings_profile_title">Sipdroid设置 (<xliff:g id="profile">%s</xliff:g>)</string>
<string name="settings_profile_menu_import">导入</string>
<string name="settings_profile_menu_export">导出</string>
<string name="settings_profile_menu_delete">删除</string>
<string name="settings_profile_dialog_profiles_title">用户配置</string>
<string name="settings_profile_dialog_delete_title">删除用户配置</string>
<string name="settings_profile_dialog_delete_text">确认要删除用户 <xliff:g id="profile">%s</xliff:g>的配置吗?</string>
<string name="settings_profile_export_error">导出用户配置失败！</string>
<string name="settings_profile_import_error">导入用户配置失败！</string>
<string name="settings_profile_delete_error">删除用户配置失败！</string>
<string name="settings_profile_delete_confirmation">成功删除用户配置。</string>
<string name="settings_wireless_options">Wi-Fi设置</string>
<string name="settings_bluetooth">需要Android 2.2或更高</string>
    <string name="phone">电话</string>
    <string name="email">邮箱</string>
    <string name="no_contact_info">没有联系人信息</string>
</resources>