<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EDEDED"
    android:orientation="vertical" >
    <LinearLayout
        android:id="@+id/top_layout"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="#EDEDED" >

        <ImageButton
            android:layout_marginLeft="8dp"
            android:layout_gravity="center"
            android:id="@+id/button_back"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:background="@null"
            android:scaleType="centerInside"
            android:src="@drawable/btn_back" /><!-- android:src="@drawable/bg_button_back" -->

        <TextView
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:singleLine="true"
            android:text="联系人详情"
            android:textColor="#000000"
            android:textSize="24sp" />

        <ImageButton
            android:id="@+id/button_little_edit"
            android:layout_gravity="center"
            android:layout_marginRight="8dp"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:background="@null"
            android:scaleType="centerInside"
            android:src="@drawable/bg_button_menu" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/photo_view"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="17dp"
            android:scaleType="fitCenter"
            android:padding="2dp"
            android:background="@drawable/bg_round_photo"
            android:src="@drawable/btn_head" />

        <TextView
            android:id="@+id/name_view"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:gravity="center"
            android:paddingLeft="17dp"
            android:paddingRight="17dp"
            android:singleLine="true"
            android:textColor="@color/home_text_deep_color"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/company_view"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="17dp"
            android:gravity="center"
            android:singleLine="true"
            android:textColor="@color/home_text_light_color"
            android:textSize="14sp" />
    </LinearLayout>
    
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fadingEdge="none"
        android:fillViewport="true" >

        <LinearLayout
            android:id="@+id/contact_info_layout"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingLeft="30dp"
            android:paddingRight="30dp" >

            <TextView
                android:id="@+id/no_contact_info_view"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:text="@string/no_contact_info"
                android:textColor="@color/gray_color"
                android:textSize="18sp"
                android:textStyle="bold"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/contact_info_phone_title"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="17dp"
                android:background="@drawable/bg_contact_info_title"
                android:gravity="center_vertical" >

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/icon_contact_info_phone" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="7dp"
                    android:text="@string/phone"
                    android:textColor="@color/gray_color"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/contact_info_phone_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >
            </LinearLayout>

            <LinearLayout
                android:id="@+id/contact_info_mail_title"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="17dp"
                android:background="@drawable/bg_contact_info_title"
                android:gravity="center_vertical" >

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/icon_contact_info_mail" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="7dp"
                    android:text="@string/email"
                    android:textColor="@color/gray_color"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/contact_info_mail_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="17dp"
                android:orientation="vertical" >
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
